# right_click_menu_manager

./: .gitignore  README.md  pubspec.yaml  right_click_menu_manager_prd.md
.github/workflows/: build.yml
lib/: app.dart  main.dart
lib/models/: backup_snapshot.dart  menu_category.dart  menu_item.dart  pending_change.dart
lib/pages/: backup_page.dart  menu_explorer_page.dart  settings_page.dart
lib/services/: backup_service.dart  explorer_service.dart  registry_service.dart  shell_notify_service.dart
lib/viewmodels/: backup_vm.dart  menu_explorer_vm.dart
lib/widgets/: edit_dialog.dart  menu_item_tag.dart  menu_tree.dart  pending_changes_bar.dart  property_panel.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt
windows/flutter/ephemeral/: generated_config.cmake
windows/flutter/ephemeral/.plugin_symlinks/: file_picker  path_provider_windows  screen_retriever_windows  system_theme  url_launcher_windows  window_manager
windows/runner/: CMakeLists.txt  Runner.exe.manifest  Runner.rc  flutter_window.cpp  flutter_window.h  generated_plugin_registrant.cc  generated_plugin_registrant.h  main.cpp  utils.cpp  utils.h  win32_window.cpp  win32_window.h
